@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-07-25 (SVN):
+    * utils/common/cmdlib.c, util_io.c: Removed commented out code.
+
+2011-07-25 (SVN):
     * h2patch/h2patch3.c: For DOS, replace gettimeofday() by uclock().
 
 2011-07-25 (SVN):
